--- a/mygobase/frame_diff.ipynb
+++ b/mygobase/frame_diff.ipynb
@@ -34,22 +34,10 @@
      "shell.execute_reply.started": "2025-02-01T09:49:36.856228Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(1,)]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "db_path = \"../db/mygo.db\"\n",
-    "conn = sqlite3.connect(db_path)\n",
-    "conn.execute(\"SELECT 1\").fetchall()"
+    "conn = sqlite3.connect(db_path)"
    ]
   },
   {
@@ -76,21 +64,21 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (5, 4)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>episode</th><th>frame_number</th><th>role</th><th>subtitle</th></tr><tr><td>i64</td><td>i64</td><td>str</td><td>str</td></tr></thead><tbody><tr><td>1</td><td>758</td><td>&quot;爽世&quot;</td><td>&quot;小祥&quot;</td></tr><tr><td>1</td><td>801</td><td>&quot;爽世&quot;</td><td>&quot;太好了 妳終於來了&quot;</td></tr><tr><td>1</td><td>855</td><td>&quot;爽世&quot;</td><td>&quot;怎麼濕成這樣 妳沒事吧&quot;</td></tr><tr><td>1</td><td>923</td><td>&quot;爽世&quot;</td><td>&quot;妳最近不來學校 發消息也不回&quot;</td></tr><tr><td>1</td><td>1031</td><td>&quot;祥子&quot;</td><td>&quot;今天我來是有話要說&quot;</td></tr></tbody></table></div>"
+       "<small>shape: (5, 3)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>id</th><th>episode</th><th>frame_number</th></tr><tr><td>i64</td><td>i64</td><td>i64</td></tr></thead><tbody><tr><td>628</td><td>1</td><td>758</td></tr><tr><td>629</td><td>1</td><td>801</td></tr><tr><td>630</td><td>1</td><td>855</td></tr><tr><td>631</td><td>1</td><td>923</td></tr><tr><td>632</td><td>1</td><td>1031</td></tr></tbody></table></div>"
       ],
       "text/plain": [
-       "shape: (5, 4)\n",
-       "┌─────────┬──────────────┬──────┬─────────────────────────────┐\n",
-       "│ episode ┆ frame_number ┆ role ┆ subtitle                    │\n",
-       "│ ---     ┆ ---          ┆ ---  ┆ ---                         │\n",
-       "│ i64     ┆ i64          ┆ str  ┆ str                         │\n",
-       "╞═════════╪══════════════╪══════╪═════════════════════════════╡\n",
-       "│ 1       ┆ 758          ┆ 爽世 ┆ 小祥                        │\n",
-       "│ 1       ┆ 801          ┆ 爽世 ┆ 太好了 妳終於來了           │\n",
-       "│ 1       ┆ 855          ┆ 爽世 ┆ 怎麼濕成這樣 妳沒事吧       │\n",
-       "│ 1       ┆ 923          ┆ 爽世 ┆ 妳最近不來學校 發消息也不回 │\n",
-       "│ 1       ┆ 1031         ┆ 祥子 ┆ 今天我來是有話要說          │\n",
-       "└─────────┴──────────────┴──────┴─────────────────────────────┘"
+       "shape: (5, 3)\n",
+       "┌─────┬─────────┬──────────────┐\n",
+       "│ id  ┆ episode ┆ frame_number │\n",
+       "│ --- ┆ ---     ┆ ---          │\n",
+       "│ i64 ┆ i64     ┆ i64          │\n",
+       "╞═════╪═════════╪══════════════╡\n",
+       "│ 628 ┆ 1       ┆ 758          │\n",
+       "│ 629 ┆ 1       ┆ 801          │\n",
+       "│ 630 ┆ 1       ┆ 855          │\n",
+       "│ 631 ┆ 1       ┆ 923          │\n",
+       "│ 632 ┆ 1       ┆ 1031         │\n",
+       "└─────┴─────────┴──────────────┘"
       ]
      },
      "execution_count": 3,
@@ -102,10 +90,9 @@
     "df = pl.read_database(\n",
     "    \"\"\"\n",
     "    SELECT\n",
+    "        id,\n",
     "        episode,\n",
-    "        frame_number,\n",
-    "        role,\n",
-    "        subtitle\n",
+    "        frame_number\n",
     "    FROM \n",
     "        storyboards \n",
     "    ORDER BY \n",
@@ -133,23 +120,23 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (3_946,)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>fn_diff</th></tr><tr><td>i64</td></tr></thead><tbody><tr><td>0</td></tr><tr><td>44</td></tr><tr><td>68</td></tr><tr><td>73</td></tr><tr><td>76</td></tr><tr><td>&hellip;</td></tr><tr><td>59</td></tr><tr><td>163</td></tr><tr><td>87</td></tr><tr><td>112</td></tr><tr><td>215</td></tr></tbody></table></div>"
+       "<small>shape: (3_946,)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>fn_diff</th></tr><tr><td>i64</td></tr></thead><tbody><tr><td>0</td></tr><tr><td>125</td></tr><tr><td>91</td></tr><tr><td>43</td></tr><tr><td>83</td></tr><tr><td>&hellip;</td></tr><tr><td>23</td></tr><tr><td>62</td></tr><tr><td>59</td></tr><tr><td>873</td></tr><tr><td>56</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (3_946,)\n",
        "Series: 'fn_diff' [i64]\n",
        "[\n",
        "\t0\n",
-       "\t44\n",
-       "\t68\n",
-       "\t73\n",
-       "\t76\n",
+       "\t125\n",
+       "\t91\n",
+       "\t43\n",
+       "\t83\n",
        "\t…\n",
+       "\t23\n",
+       "\t62\n",
        "\t59\n",
-       "\t163\n",
-       "\t87\n",
-       "\t112\n",
-       "\t215\n",
+       "\t873\n",
+       "\t56\n",
        "]"
       ]
      },
@@ -273,9 +260,206 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3553f66f",
+   "metadata": {},
+   "source": [
+    "# Divide Scenes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "7809a8e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "117"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fn_diff.filter((fn_diff > 330)).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c3193bdb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scenes = []\n",
+    "scene_cnt = 1\n",
+    "for is_new_scene_start in (fn_diff > 330).to_list():\n",
+    "    if is_new_scene_start:\n",
+    "        scene_cnt += 1\n",
+    "    scenes.append(scene_cnt)\n",
+    "scenes[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f3c42ad1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "118"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scenes_series = pl.Series(scenes)\n",
+    "scenes_series.unique().count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "5cd4537f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (3_946,)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th></th></tr><tr><td>i64</td></tr></thead><tbody><tr><td>1</td></tr><tr><td>1</td></tr><tr><td>1</td></tr><tr><td>1</td></tr><tr><td>1</td></tr><tr><td>&hellip;</td></tr><tr><td>117</td></tr><tr><td>117</td></tr><tr><td>117</td></tr><tr><td>118</td></tr><tr><td>118</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (3_946,)\n",
+       "Series: '' [i64]\n",
+       "[\n",
+       "\t1\n",
+       "\t1\n",
+       "\t1\n",
+       "\t1\n",
+       "\t1\n",
+       "\t…\n",
+       "\t117\n",
+       "\t117\n",
+       "\t117\n",
+       "\t118\n",
+       "\t118\n",
+       "]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scenes_series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "cbf2677f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (3_946, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>id</th><th>scene</th></tr><tr><td>i64</td><td>i64</td></tr></thead><tbody><tr><td>628</td><td>1</td></tr><tr><td>629</td><td>1</td></tr><tr><td>630</td><td>1</td></tr><tr><td>631</td><td>1</td></tr><tr><td>632</td><td>1</td></tr><tr><td>&hellip;</td><td>&hellip;</td></tr><tr><td>4178</td><td>117</td></tr><tr><td>4179</td><td>117</td></tr><tr><td>4180</td><td>117</td></tr><tr><td>4181</td><td>118</td></tr><tr><td>4182</td><td>118</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (3_946, 2)\n",
+       "┌──────┬───────┐\n",
+       "│ id   ┆ scene │\n",
+       "│ ---  ┆ ---   │\n",
+       "│ i64  ┆ i64   │\n",
+       "╞══════╪═══════╡\n",
+       "│ 628  ┆ 1     │\n",
+       "│ 629  ┆ 1     │\n",
+       "│ 630  ┆ 1     │\n",
+       "│ 631  ┆ 1     │\n",
+       "│ 632  ┆ 1     │\n",
+       "│ …    ┆ …     │\n",
+       "│ 4178 ┆ 117   │\n",
+       "│ 4179 ┆ 117   │\n",
+       "│ 4180 ┆ 117   │\n",
+       "│ 4181 ┆ 118   │\n",
+       "│ 4182 ┆ 118   │\n",
+       "└──────┴───────┘"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scenes_df = df.select(\"id\").with_columns(scene=scenes_series)\n",
+    "scenes_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "e1eddab9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    with sqlite3.connect(db_path) as conn:\n",
+    "        cur = conn.cursor()\n",
+    "        for row in scenes_df.iter_rows(named=True):\n",
+    "            # print(row)\n",
+    "            cur.execute(\n",
+    "                \"\"\"\n",
+    "                UPDATE storyboards\n",
+    "                SET scene = ?\n",
+    "                WHERE id = ?\n",
+    "                \"\"\",\n",
+    "                (row[\"scene\"], row[\"id\"]),\n",
+    "            )\n",
+    "        conn.commit()\n",
+    "except sqlite3.IntegrityError as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a54bdaf",
+   "id": "31aea125",
    "metadata": {},
    "outputs": [],
    "source": []
