--- a/mygobase/label_role.ipynb
+++ b/mygobase/label_role.ipynb
@@ -24,11 +24,12 @@
    "outputs": [],
    "source": [
     "import sqlite3\n",
+    "from dataclasses import dataclass\n",
     "from io import BytesIO\n",
     "from typing import Iterator\n",
+    "\n",
     "from PIL import Image\n",
     "from IPython.display import display, clear_output\n",
-    "from mygobase.datatypes import Storyboard\n",
     "from tqdm import tqdm"
    ]
   },
@@ -47,6 +48,16 @@
    },
    "outputs": [],
    "source": [
+    "@dataclass\n",
+    "class Storyboard:\n",
+    "    id: int\n",
+    "    episode: int\n",
+    "    frame_number: int\n",
+    "    subtitle: str\n",
+    "    picture: bytes\n",
+    "    role: str | None\n",
+    "\n",
+    "\n",
     "def namedtuple_factory(cursor, row):\n",
     "    return Storyboard(*row)\n",
     "\n",
@@ -222,7 +233,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "mygobase-bZb6EiN6-py3.12",
    "language": "python",
    "name": "python3"
   },
